--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,11 @@ body {
   padding: 0;
   font-family: sans-serif;
 }
+
+.CodeMirror {
+  height: 100% !important;
+}
+
+.ReactCodeMirror {
+  height: 100% !important;
+}
